fixed small errors
fixed typos, added personalized scrollbar, and fixed buttons on apple devices

--- a/css/main.css
+++ b/css/main.css
@@ -255,14 +255,16 @@ li {
     border-radius: 35px;
   }
   #social{
+    padding-top: 20px;
     font-size: 15px;
   }
-  #links{
+  #links {
     height: 40px;
     width: 40px;
     border-radius: 50px;
     margin-left: 10px;
     margin-right: 10px;
+    font-size: 18px;
     margin-bottom: 20px;
   }
   #social-icon{
@@ -281,6 +283,22 @@ li {
     max-height: 280px;
     padding: 0;
   }
+  #social{
+    padding-top: 20px;
+    font-size: 15px;
+  }
+  #links {
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  #social-icon{
+    font-size: 24px;
+  }
 }
 
 
@@ -293,6 +311,22 @@ li {
     width: 100%;
     max-height: 260px;
     padding: 0;
+  }
+  #social{
+    padding-top: 20px;
+    font-size: 15px;
+  }
+  #links {
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  #social-icon{
+    font-size: 24px;
   }
 }
 
