--- a/css/menu.css
+++ b/css/menu.css
@@ -218,3 +218,22 @@ li{
     }
 }
 
+::-webkit-scrollbar {
+    width: 13px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 50px rgba(60,60,60,1); 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+   -webkit-box-shadow: inset 0 0 50px rgba(60,60,60,1);
+  }
+  
+
