--- a/css/sucursal.css
+++ b/css/sucursal.css
@@ -137,3 +137,22 @@ li {
     font-size: 24px;
   }
 }
+
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 50px rgba(60,60,60,1); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+ -webkit-box-shadow: inset 0 0 50px rgba(60,60,60,1);
+}
+
